added an example of crypto and finance scrabing

--- a/1-introduction/lesson1.ipynb
+++ b/1-introduction/lesson1.ipynb
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "4e2a9393-7767-488e-a8bf-27c12dca35bd",
    "metadata": {},
    "outputs": [],
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "7b87cadb-d513-4303-baee-a37b6f938e4d",
    "metadata": {},
    "outputs": [
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "019974d9-f3ad-4a8a-b5f9-0a3719aea2d3",
    "metadata": {},
    "outputs": [],
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "a58394bf-1e45-46af-9bfd-01e24da6f49a",
    "metadata": {},
    "outputs": [
@@ -170,7 +170,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hello! It’s great to hear from you! How can I assist you today?\n"
+      "Hello! It's great to hear from you! How can I assist you today?\n"
      ]
     }
    ],
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "c5e793b2-6775-426a-a139-4848291d0463",
    "metadata": {},
    "outputs": [],
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "2ef960cf-6dc2-4cda-afb3-b38be12f4c97",
    "metadata": {},
    "outputs": [
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "abdb8417-c5dc-44bc-9bee-2e059d162699",
    "metadata": {},
    "outputs": [],
@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "f0275b1b-7cfe-4f9d-abfa-7650d378da0c",
    "metadata": {},
    "outputs": [],
@@ -444,7 +444,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Oh, let me get my calculator for this one... Just kidding! It's 4. Shocking, I know!\n"
+      "Oh, let's see… If I add two and two together, I get—drumroll, please—four! Shocking, I know.\n"
      ]
     }
    ],
@@ -540,7 +540,7 @@
     {
      "data": {
       "text/plain": [
-       "\"# Summary of Edward Donner's Website\\n\\nThe website features Edward Donner, a software engineer and experimenter with large language models (LLMs). He is the co-founder and CTO of Nebula.io, focused on applying AI to enhance talent discovery and management. Previously, he founded the startup untapt, which was acquired in 2021. His interests also include amateur DJing and electronic music production.\\n\\n## Recent Posts and Announcements\\n- **November 13, 2024:** Resources on mastering AI and LLM engineering.\\n- **October 16, 2024:** A guide for transitioning from software engineer to AI data scientist.\\n- **August 6, 2024:** Introduction to the Outsmart LLM Arena, which challenges LLMs in diplomacy and deviousness.\\n- **June 26, 2024:** A discussion on choosing the right LLM, including tips and resources.\""
+       "\"# Summary of Edward Donner's Website\\n\\nThe website is created by Edward Donner, a software engineer and the co-founder/CTO of Nebula.io, a company focused on using AI to enhance talent discovery and engagement. Edward enjoys writing code, experimenting with large language models (LLMs), DJing, and electronic music production. He has previously founded an AI startup, untapt, which was acquired in 2021.\\n\\n## Key Features:\\n- **Outsmart**: A competitive arena where LLMs are tested for their skills in diplomacy and strategy.\\n- **Posts**: Edward shares resources and insights related to AI and LLM engineering, including guides for transitioning careers into AI and selecting the right LLMs.\\n\\n## Recent Announcements:\\n- **November 13, 2024**: Released resources on mastering AI and LLM engineering.\\n- **October 16, 2024**: Published resources for transitioning from a software engineer to an AI data scientist.\\n- **August 6, 2024**: Announced the Outsmart LLM Arena.\\n- **June 26, 2024**: Shared a toolkit and resources for choosing the right LLM.\""
       ]
      },
      "execution_count": 15,
@@ -577,22 +577,15 @@
       "text/markdown": [
        "# Summary of Edward Donner's Website\n",
        "\n",
-       "The website is centered around Ed Donner, who is a software developer and AI enthusiast, particularly fascinated by Large Language Models (LLMs). Ed is the co-founder and CTO of Nebula.io, a company focused on leveraging AI to aid individuals in realizing their potential and enhancing talent discovery and management processes. Previously, he founded the AI startup untapt, which was acquired in 2021.\n",
+       "The website belongs to Ed Donner, a professional engaged in coding and experimentation with large language models (LLMs), alongside interests in DJing and electronic music production. Ed is the co-founder and CTO of Nebula.io, a company focused on leveraging AI to enhance talent discovery and management, having previously founded an AI startup, untapt.\n",
        "\n",
-       "## Key Features:\n",
+       "## Recent Posts:\n",
+       "1. **November 13, 2024:** Mastering AI and LLM Engineering – Resources\n",
+       "2. **October 16, 2024:** From Software Engineer to AI Data Scientist – Resources\n",
+       "3. **August 6, 2024:** Outsmart LLM Arena – a battle of diplomacy and deviousness\n",
+       "4. **June 26, 2024:** Choosing the Right LLM: Toolkit and Resources\n",
        "\n",
-       "- **Outsmart**: A project that creates competitive scenarios for LLMs, showcasing their capabilities in diplomacy and strategy.\n",
-       "\n",
-       "- **Blog Posts**: Ed shares various resources through blog posts covering topics such as transitioning from software engineering to AI data science, mastering AI and LLM engineering, and selecting the right LLM.\n",
-       "\n",
-       "## Recent Announcements:\n",
-       "\n",
-       "- **November 13, 2024**: Shared resources on \"Mastering AI and LLM Engineering.\"\n",
-       "- **October 16, 2024**: Provided resources for transitioning from a software engineer to an AI data scientist.\n",
-       "- **August 6, 2024**: Discussed the \"Outsmart LLM Arena\" focusing on LLM battles.\n",
-       "- **June 26, 2024**: Offered a guide on \"Choosing the Right LLM: Toolkit and Resources.\" \n",
-       "\n",
-       "The website serves as a personal platform for Ed to connect with others interested in AI and LLMs, providing insights, resources, and updates on his projects."
+       "The website emphasizes Ed's contributions to the field of AI and LLMs and offers resources aimed at individuals looking to enhance their skills in these areas."
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -663,12 +656,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "75e9fd40-b354-4341-991e-863ef2e59db7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "# Decrypt Summary\n",
+       "\n",
+       "Decrypt is a comprehensive online platform providing news and insights centered around cryptocurrency, artificial intelligence, gaming, and cultural developments in the crypto space. It features a mix of market analysis, long-form articles, and educational content related to Web3 and digital assets.\n",
+       "\n",
+       "## Key Highlights:\n",
+       "\n",
+       "### Market Updates\n",
+       "- **Bitcoin** recently returned to the **$100k** mark, positively impacting various other cryptocurrencies like **XRP**, **Dogecoin**, and **Solana**.\n",
+       "- The current prices of key cryptocurrencies include:\n",
+       "  - **BTC**: $101,110.00\n",
+       "  - **ETH**: $3,808.52\n",
+       "  - **XRP**: $2.43\n",
+       "  - **SOL**: $229.74\n",
+       "\n",
+       "### Recent News\n",
+       "- **Fartcoin** has surged, marking a significant rise as meme coins gain popularity, with its all-time high reported.\n",
+       "- **Peanut the Squirrel** meme coin is experiencing growth following potential listing plans on Coinbase.\n",
+       "- **Ubisoft** is launching a new game titled **‘Captain Laserhawk’** coupled with a free NFT minting initiative.\n",
+       "- The impact of cryptocurrency on American politics and its growing influence is discussed in the feature article **“Decrypt’s 2024 Story of the Year.”**\n",
+       "- Other news highlights include a partnership between Binance and Circle to enhance USDC adoption, and a South Korean indie film inspired by the Terra crash titled **‘Crypto Man’**.\n",
+       "\n",
+       "### Press Releases\n",
+       "- Several cryptocurrency-related initiatives and partnerships are highlighted, showcasing ongoing developments and activities within the crypto industry, including the release of security standards by WhiteBIT and partnerships for enhanced ecosystem connectivity.\n",
+       "\n",
+       "Decrypt serves as a crucial source of industry knowledge, market trends, and valuable insights for both enthusiasts and participants in the evolving landscape of digital finance and beyond."
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "display_summary(\"https://anthropic.com\")"
+    "display_summary(\"https://decrypt.co/\")"
    ]
   },
   {
