--- a/1-introduction/day1-selenium-for-javascript-sites.ipynb
+++ b/1-introduction/day1-selenium-for-javascript-sites.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "4e2a9393-7767-488e-a8bf-27c12dca35bd",
    "metadata": {},
    "outputs": [],
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "7b87cadb-d513-4303-baee-a37b6f938e4d",
    "metadata": {},
    "outputs": [],
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "c5e793b2-6775-426a-a139-4848291d0463",
    "metadata": {},
    "outputs": [],
@@ -100,10 +100,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "2ef960cf-6dc2-4cda-afb3-b38be12f4c97",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Home - Edward Donner\n",
+      "Home\n",
+      "Outsmart\n",
+      "An arena that pits LLMs against each other in a battle of diplomacy and deviousness\n",
+      "About\n",
+      "Posts\n",
+      "Well, hi there.\n",
+      "I’m Ed. I like writing code and experimenting with LLMs, and hopefully you’re here because you do too. I also enjoy DJing (but I’m badly out of practice), amateur electronic music production (\n",
+      "very\n",
+      "amateur) and losing myself in\n",
+      "Hacker News\n",
+      ", nodding my head sagely to things I only half understand.\n",
+      "I’m the co-founder and CTO of\n",
+      "Nebula.io\n",
+      ". We’re applying AI to a field where it can make a massive, positive impact: helping people discover their potential and pursue their reason for being. Recruiters use our product today to source, understand, engage and manage talent. I’m previously the founder and CEO of AI startup untapt,\n",
+      "acquired in 2021\n",
+      ".\n",
+      "We work with groundbreaking, proprietary LLMs verticalized for talent, we’ve\n",
+      "patented\n",
+      "our matching model, and our award-winning platform has happy customers and tons of press coverage.\n",
+      "Connect\n",
+      "with me for more!\n",
+      "November 13, 2024\n",
+      "Mastering AI and LLM Engineering – Resources\n",
+      "October 16, 2024\n",
+      "From Software Engineer to AI Data Scientist – resources\n",
+      "August 6, 2024\n",
+      "Outsmart LLM Arena – a battle of diplomacy and deviousness\n",
+      "June 26, 2024\n",
+      "Choosing the Right LLM: Toolkit and Resources\n",
+      "Navigation\n",
+      "Home\n",
+      "Outsmart\n",
+      "An arena that pits LLMs against each other in a battle of diplomacy and deviousness\n",
+      "About\n",
+      "Posts\n",
+      "Get in touch\n",
+      "ed [at] edwarddonner [dot] com\n",
+      "www.edwarddonner.com\n",
+      "Follow me\n",
+      "LinkedIn\n",
+      "Twitter\n",
+      "Facebook\n",
+      "Subscribe to newsletter\n",
+      "Type your email…\n",
+      "Subscribe\n"
+     ]
+    }
+   ],
    "source": [
     "# Let's try one out\n",
     "\n",
@@ -132,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "abdb8417-c5dc-44bc-9bee-2e059d162699",
    "metadata": {},
    "outputs": [],
@@ -144,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "f0275b1b-7cfe-4f9d-abfa-7650d378da0c",
    "metadata": {},
    "outputs": [],
@@ -177,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "0134dfa4-8299-48b5-b444-f2a8c3403c88",
    "metadata": {},
    "outputs": [],
@@ -199,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "905b9919-aba7-45b5-ae65-81b3d1d78e34",
    "metadata": {},
    "outputs": [],
@@ -215,17 +268,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "05e38d41-dfa4-4b20-9c96-c46ea75d9fb5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"# Edward Donner Website Summary\\n\\nThe website belongs to Ed Donner, a tech enthusiast focused on code and experimentation with Large Language Models (LLMs). He is the co-founder and CTO of Nebula.io, a company dedicated to leveraging AI for talent discovery and management, and has previously founded an AI startup, untapt, which was acquired in 2021.\\n\\n## Key Features:\\n- **Outsmart**: A unique arena concept where LLMs compete in diplomacy and strategic challenges.\\n- **Professional Background**: Highlights Ed's experience in the AI field and his passion for technology and electronic music.\\n  \\n## Recent Posts/Announcements:\\n- **November 13, 2024**: Resources for mastering AI and LLM engineering.\\n- **October 16, 2024**: Guidance on transitioning from software engineer to AI data scientist.\\n- **August 6, 2024**: Information about the Outsmart LLM arena.\\n- **June 26, 2024**: A toolkit and resources for selecting the right LLM. \\n\\nOverall, the website serves as a platform for sharing knowledge on LLMs, Ed's professional endeavors, and insights into AI applications in talent management.\""
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "summarize(\"https://edwarddonner.com\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "3d926d59-450e-4609-92ba-2d6f244f1342",
    "metadata": {},
    "outputs": [],
@@ -237,10 +301,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "3018853a-445f-41ff-9560-d925d1774b2f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "# Summary of Edward Donner's Website\n",
+       "\n",
+       "The website belongs to Ed Donner, co-founder and CTO of Nebula.io, where he focuses on applying AI to aid talent discovery and management. He expresses a keen interest in coding, experimenting with Large Language Models (LLMs), and DJing. He has a background as the founder of AI startup untapt, which was acquired in 2021.\n",
+       "\n",
+       "## Recent Posts\n",
+       "1. **Mastering AI and LLM Engineering – Resources** (November 13, 2024)\n",
+       "2. **From Software Engineer to AI Data Scientist – Resources** (October 16, 2024)\n",
+       "3. **Outsmart LLM Arena – A Battle of Diplomacy and Deviousness** (August 6, 2024)\n",
+       "4. **Choosing the Right LLM: Toolkit and Resources** (June 26, 2024)\n",
+       "\n",
+       "The site emphasizes community engagement and offers resources on LLMs and AI development."
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "display_summary(\"https://edwarddonner.com\")"
    ]
@@ -277,20 +364,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "52ae98bb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "# Website Summary\n",
+       "\n",
+       "The website appears to require users to enable JavaScript and cookies to access its content, which may suggest interactive features or customized user experiences. Unfortunately, without further accessible content or specific information, I am unable to provide a detailed summary or any news and announcements from the site. \n",
+       "\n",
+       "If you have additional text or more context from the website, please provide it for a more thorough summary."
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "display_summary(\"https://openai.com\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "5d57e958",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'selenium'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[14], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m#Parse webpages which is designed using JavaScript heavely\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;66;03m# download the chorme driver from here as per your version of chrome - https://developer.chrome.com/docs/chromedriver/downloads\u001b[39;00m\n\u001b[0;32m----> 3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mselenium\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m webdriver\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mselenium\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mwebdriver\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mchrome\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mservice\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Service\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mselenium\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mwebdriver\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mcommon\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mby\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m By\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'selenium'"
+     ]
+    }
+   ],
    "source": [
     "#Parse webpages which is designed using JavaScript heavely\n",
     "# download the chorme driver from here as per your version of chrome - https://developer.chrome.com/docs/chromedriver/downloads\n",
