--- a/1-introduction/crypto-stocks-summary.ipynb
+++ b/1-introduction/crypto-stocks-summary.ipynb
@@ -3,7 +3,13 @@
   {
    "cell_type": "markdown",
    "id": "89f4a685-e2c9-49dc-adeb-f8ba7879e4e4",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "source": [
     "Getting latest news on crypto and stocks for my personal tracking purposes.\n",
     "\n",
