--- a/2-MultiModal-Chatbot/multi-modal-extended-airline-assistant.ipynb
+++ b/2-MultiModal-Chatbot/multi-modal-extended-airline-assistant.ipynb
@@ -789,7 +789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "f38d0d27-33bf-4992-a2e5-5dbed973cde7",
    "metadata": {},
    "outputs": [
@@ -797,7 +797,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "* Running on local URL:  http://127.0.0.1:7861\n",
+      "* Running on local URL:  http://127.0.0.1:7862\n",
       "\n",
       "To create a public link, set `share=True` in `launch()`.\n"
      ]
@@ -805,7 +805,7 @@
     {
      "data": {
       "text/html": [
-       "<div><iframe src=\"http://127.0.0.1:7861/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+       "<div><iframe src=\"http://127.0.0.1:7862/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -818,7 +818,7 @@
      "data": {
       "text/plain": []
      },
-     "execution_count": 19,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -826,10 +826,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Input #0, wav, from '/var/folders/my/fzxwfy9j0sx4t_ddhvcxxfjc0000gn/T/tmptam_ixa2.wav':\n",
-      "  Duration: 00:00:02.06, bitrate: 384 kb/s\n",
+      "Input #0, wav, from '/var/folders/my/fzxwfy9j0sx4t_ddhvcxxfjc0000gn/T/tmpv6glmnd2.wav':\n",
+      "  Duration: 00:00:02.11, bitrate: 384 kb/s\n",
       "  Stream #0:0: Audio: pcm_s16le ([1][0][0][0] / 0x0001), 24000 Hz, 1 channels, s16, 384 kb/s\n",
-      "   1.98 M-A:  0.000 fd=   0 aq=    0KB vq=    0KB sq=    0B "
+      "Input #0, wav, from '/var/folders/my/fzxwfy9j0sx4t_ddhvcxxfjc0000gn/T/tmpm4fwugfm.wav':\n",
+      "  Duration: 00:00:02.45, bitrate: 384 kb/s\n",
+      "  Stream #0:0: Audio: pcm_s16le ([1][0][0][0] / 0x0001), 24000 Hz, 1 channels, s16, 384 kb/s\n",
+      "   2.22 M-A:  0.000 fd=   0 aq=    0KB vq=    0KB sq=    0B "
      ]
     },
     {
@@ -843,10 +846,60 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Input #0, wav, from '/var/folders/my/fzxwfy9j0sx4t_ddhvcxxfjc0000gn/T/tmpsfm1ak0g.wav':\n",
-      "  Duration: 00:00:05.90, bitrate: 384 kb/s\n",
+      "   2.36 M-A: -0.000 fd=   0 aq=    0KB vq=    0KB sq=    0B "
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Input #0, wav, from '/var/folders/my/fzxwfy9j0sx4t_ddhvcxxfjc0000gn/T/tmpcoq6q4ls.wav':\n",
+      "  Duration: 00:00:03.65, bitrate: 384 kb/s\n",
       "  Stream #0:0: Audio: pcm_s16le ([1][0][0][0] / 0x0001), 24000 Hz, 1 channels, s16, 384 kb/s\n",
-      "   5.83 M-A: -0.000 fd=   0 aq=    0KB vq=    0KB sq=    0B "
+      "   3.53 M-A:  0.000 fd=   0 aq=    0KB vq=    0KB sq=    0B "
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Tool get_ticket_price called for Cairo\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Input #0, wav, from '/var/folders/my/fzxwfy9j0sx4t_ddhvcxxfjc0000gn/T/tmp7px5btk0.wav':\n",
+      "  Duration: 00:00:04.03, bitrate: 384 kb/s\n",
+      "  Stream #0:0: Audio: pcm_s16le ([1][0][0][0] / 0x0001), 24000 Hz, 1 channels, s16, 384 kb/s\n",
+      "   3.97 M-A: -0.000 fd=   0 aq=    0KB vq=    0KB sq=    0B "
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Tool get_ticket_price called for London\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Input #0, wav, from '/var/folders/my/fzxwfy9j0sx4t_ddhvcxxfjc0000gn/T/tmpf_h8pfm9.wav':\n",
+      "  Duration: 00:00:02.40, bitrate: 384 kb/s\n",
+      "  Stream #0:0: Audio: pcm_s16le ([1][0][0][0] / 0x0001), 24000 Hz, 1 channels, s16, 384 kb/s\n",
+      "   2.33 M-A: -0.000 fd=   0 aq=    0KB vq=    0KB sq=    0B "
      ]
     },
     {
